Try to get rdebug-track under control again. Remove "<" in the command buffer as a local key setting. Make more checkdoc friendly.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.10.2
+ - debugger(steps=0) breaks inside of debugger rather than wait for a line event.
+
 0.10.1
 4/10/08 - in honor of the 30th Birthday of Kate Schwarz
 
