--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,13 @@
 0.10.3
+ - a backtrace now warns when it thinks the callstack is truncated which it
+   gets by comparing with caller()
+ - fix setting $0.
+ - fix bug in showing variables in post-mortem
+ - Document how Debugger.start with a block is intended to be used.
+ - Move Kernel#debugger from ruby-debug-base into ruby-debug
+ - Get regression tests working again
+ - Warn and add a "confirmation" when setting a breakpoint on a
+   file that is not loaded.
 
 0.10.2
  - debugger(steps=0) breaks inside of debugger rather than wait for a line event.
